--- a/src/localization/nhk2025b_ekf_localizer/package.xml
+++ b/src/localization/nhk2025b_ekf_localizer/package.xml
@@ -16,7 +16,7 @@
   <depend>tf2</depend>
   <depend>tf2_ros</depend>
   <depend>tf2_geometry_msgs</depend>
-  <depend>Eigen3</depend>
+  <depend>eigen</depend>
 
   <export>
     <build_type>ament_cmake</build_type>
