--- a/src/localization/nhk2025b_scan_matcher/CMakeLists.txt
+++ b/src/localization/nhk2025b_scan_matcher/CMakeLists.txt
@@ -17,6 +17,11 @@ rclcpp_components_register_node(${PROJECT_NAME}
     EXECUTABLE ndt
 )
 
+rclcpp_components_register_node(${PROJECT_NAME}
+    PLUGIN "mcl::mcl"
+    EXECUTABLE mcl
+)
+
 ament_auto_package(
     INSTALL_TO_SHARE
 )
