--- a/src/localization/nhk2025b_mcl/package.xml
+++ b/src/localization/nhk2025b_mcl/package.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0"?>
 <package format="3">
-  <name>nhk2025b_scan_matcher</name>
+  <name>nhk2025b_mcl</name>
   <version>0.0.1</version>
-  <description>スキャン抹茶〜</description>
+  <description>mcl</description>
   <maintainer email="kzs321kzs@gmail.com">Kazusa Hashimoto</maintainer>
   <license>MIT</license>
 
@@ -14,7 +14,6 @@
   <depend>nav_msgs</depend>
   <depend>tf2</depend>
   <depend>tf2_ros</depend>
-  <depend>pcl_conversions</depend>
   <depend>tf2_geometry_msgs</depend>
 
   <export>
