--- a/src/localization/nhk2025b_pose_initializer/package.xml
+++ b/src/localization/nhk2025b_pose_initializer/package.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0"?>
 <package format="3">
-  <name>nhk2025b_mcl</name>
+  <name>nhk2025b_pose_initializer</name>
   <version>0.0.1</version>
-  <description>mcl</description>
+  <description>RANSAC pose initializer</description>
   <maintainer email="kzs321kzs@gmail.com">Kazusa Hashimoto</maintainer>
   <license>MIT</license>
 
@@ -11,11 +11,7 @@
   <depend>rclcpp</depend>
   <depend>rclcpp_components</depend>
   <depend>sensor_msgs</depend>
-  <depend>nav_msgs</depend>
   <depend>geometry_msgs</depend>
-  <depend>tf2</depend>
-  <depend>tf2_ros</depend>
-  <depend>tf2_geometry_msgs</depend>
 
   <export>
     <build_type>ament_cmake</build_type>
